--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
 <button id="disconnect" type="button">Disconnect</button>
 
+<form id="uuid-form">
+    <input id="id_service" type="text">
+    <input id="id_characteristic" type="text">
+    <input id="apply_button" type="button">apply</button>
+</form>
+
+
 <div id="terminal"></div>
 
 <form id="send-form">
